--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
  <div class="line"></div>
  <div class="line"></div>
  <div class="line"></div>
+ <div class="line"></div>
+ <div class="line"></div>
 
 </div>
 
@@ -20,13 +22,20 @@
     <li><a href="#">About</a></li>
     <li><a href="#">contact</a></li>
     <li><a href="#">projects</a></li>
+    <li><a href="#">diplomes</a></li>
+    <li><a href="#">skills</a></li>
 </ul>
 
     </nav>
 <section class="landing">
-    <img src="./circles.svg" alt="dots" />
-    <h1>Dots</h1>
+    
+    <h1>Merabet Assed</h1>
+    <h3>developpeur web et web-mobile </h3>
 </section>
+<footer>
+
+
+</footer>
   <script src="app.js"></script>  
 </body>
 </html>
